nam add